# OOP-Currency-Exchange

./: .gitignore  CMakeLists.txt  base.csv  currency.csv  main.cpp  main.h
class/: admin.cpp  admin.h  currency.cpp  currency.h  dataOperator.cpp  dataOperator.h  user.cpp  user.h  wallet.cpp  wallet.h
